# agentic-ai-engine

./: .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  agentic_ai_main.py  docker-compose.yml  pyproject.toml
app/: config.py
app/agent_repo/: __init__.py  agent_registry.py
app/agent_repo/greeting_agent/: __init__.py  agent.py  prompt.py
app/agent_repo/research_team/: __init__.py  agent.py  prompt.py  schemas.py
app/agent_repo/summarizer_agent/: __init__.py  agent.py  prompt.py
app/api/: fastapi_app.py
app/api/v1/: agent_router.py  ws_router.py
app/context/: agent_engine.py
app/context/artifacts/: artifact_service_handler.py
app/context/memory/: memory_bank_handler.py
app/context/rag/: rag_engine_handler.py
app/handlers/: agent_team_app.py  agent_team_handler.py  session_handler.py  ws_connection_handler.py
app/mcp_servers/web_fetch/: Dockerfile  fetcher.py  server.py
app/ui/: chat.html
app/ui/css/: chat.css
app/ui/js/: chat.js
docs/superpowers/plans/: 2026-05-23-summarizer-agent.md
docs/superpowers/specs/: 2026-05-23-summarizer-agent-design.md
tests/agent_repo/: test_research_team.py
