[project]
name = "agentic-ai-engineering"
version = "0.1.0"
description = "Agentic AI Engineering"
readme = "README.md"
requires-python = ">=3.14,<3.15"
authors = [
    {name = "Ursula", email = "ursula.maria.mayer@sciform.com"}
]
license = {text = "MIT"}

dependencies = [
    "google-auth>=2.50.0",
    # google-adk[eval] requires google-cloud-aiplatform[evaluation]>=1.148.0.
    # Versions >=1.150.0 pull in litellm>=1.83.7 which pins python-dotenv==1.0.1
    # and pydantic==2.12.5 — both incompatible with our lower bounds.
    # Capping at 1.149.0 avoids those transitive conflicts.
    "google-adk[eval]>=2.0.0b1",
    "google-cloud-aiplatform>=1.148.0,<=1.149.0",
    "google-cloud-storage>=3.10.1",
    "google-genai>=1.75.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.0",
    "httpx>=0.28.0",
    "structlog>=25.0.0",
    "fpdf2>=2.8.0",
    "a2a-sdk>=0.3.4,<0.4.0",
    "mcp>=1.2.0",
    "beautifulsoup4>=4.12.0",
    "readability-lxml>=0.8.1",
    "lxml>=5.0.0",
    "lxml_html_clean>=0.2.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=25.0.0",
    "isort>=5.13.0",
    "flake8>=7.0.0",
    "mypy>=1.10.0",
    "ruff>=0.6.0",
    "pre-commit>=4.0.0",
]

[tool.black]
line-length = 100
target-version = ["py314"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --cov=app --cov-report=html -m 'not integration'"
markers = [
    "integration: end-to-end tests that require GCP credentials and live LLM calls (skipped by default with -m 'not integration')",
]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
where = ["app", "scripts", "tests"]
